feat. signature 재설정